--- a/activeat/package.json
+++ b/activeat/package.json
@@ -6,6 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "express": "^4.16.4",
+    "mongodb": "^3.2.3",
+    "mongojs": "^2.6.0",
+    "mongoose": "^5.9.25",
+    "morgan": "^1.9.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
@@ -14,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "seed": "node scripts/userSeed.js",
+    "seed2": "node scripts/eventSeed.js"
   },
   "eslintConfig": {
     "extends": "react-app"
