--- a/package.json
+++ b/package.json
@@ -19,8 +19,15 @@
     "nodemon": "^1.19.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express": "^4.16.3",
+    "express-sessions": "^1.0.6",
     "if-env": "^1.0.4",
-    "mongoose": "^5.9.27"
+    "mongoose": "^5.9.27",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
