--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,12 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "axios": "^0.19.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^2.1.1",
-    "@material-ui/core": "^4.11.0"
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
