--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "dependencies": {
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.9.27"
+    "mongoose": "^5.9.27",
+    "react-google-autocomplete": "^1.2.6",
+    "react-map-gl": "^5.2.7",
+    "react-native-maps": "^0.27.1"
   }
 }
