--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-google-autocomplete": "^1.2.6",
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "react-swipeable-views": "^0.13.9"
   },
   "scripts": {
     "start": "react-scripts start",
